[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msoffcrypto-tool>=5.4.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
pr = "uu_app.main:main"
password-remover = "uu_app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uu_app"]